# qik

./: .gitignore  Cargo.toml  cargo.toml  controller.proto
client/: Cargo.toml  client.go  go.mod
client/proto/: controller.pb.go  controller.proto
client/src/: main.rs
controller/: Cargo.toml  build.rs
controller/proto/: controller.proto
controller/src/: main.rs
controller/src/rpc/: controller.rs  mod.rs  util.rs
controller/src/services/: controller.rs  listen.rs  mod.rs  periodic.rs  task.rs
redis/: Cargo.toml
redis/src/: client.rs  failure.rs  lib.rs  periodic.rs  update.rs
worker/: Cargo.toml  go.mod  worker.go
worker/proto/: controller.proto  controller_grpc.pb.go
worker/src/: main.rs
