[workspace]
resolver = "2"
members = [ "worker","controller", "redis"]

[workspace.dependencies]
anyhow = "1.0.97"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
dotenv = "0.15.0"
redis = { version = "0.29.5", features = ["tokio-comp", "script", "aio"] }
tracing-subscriber = "0.3.19"
tracing = "0.1"
tonic = "0.13.0"
