[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "*"
dotenv = "0.15.0"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
prost-types = "0.13.5"
google = "0.0.0"
redis = { path = "../redis" }
tokio-stream = "0.1.17"
uuid = "1.16.0"

[build-dependencies]
tonic-build = "*"
